# rebase-base-identity-service

./: .gitignore  CHANGELOG.md  Licence  MAIL_ARCHITECTURE.md  Readme.md  cli.py  keys.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: app_settings.py  auth.py  health.py  (+9 more)
app/core/: config.py  db.py  exceptions_handler.py  jwk.py  security.py  store.py
app/exceptions/: base.py  bussiness_exceptions.py  exception_codes.py  http_exceptions.py
app/models/: __init__.py  access_token.py  app_settings.py  base.py  client_application.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
app/policies/: password_policies.py  username_policies.py
app/repositories/: access_token_repository.py  app_settings_repository.py  client_application_repository.py  permission_repository.py  refresh_token_repository.py  role_repository.py  user_repository.py
app/schemas/: app_settings.py  client_applications.py  error.py  permission.py  role.py  user.py  user_info_schema.py
app/services/: client_application_service.py  mail_service.py  password_service.py  permission_service.py  role_service.py  token_cleanup_service.py  token_service.py  user_service.py
app/templates/: base.html  forgot_password.html  login.html  reset_password.html  verify_email.html  verify_resend.html  verify_result.html
app/utils/: dates.py
migrations/: env.py
migrations/versions/: 400cde4d06aa_added_role_permission_and_update_user_.py  b8047835e955_initial_migration.py  e7db2397a2f6_create_appsetings_table.py
(+27 files in other folders)
